--- a/index.html
+++ b/index.html
@@ -4,20 +4,20 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>PodBite - Create Perfect Podcast Clips</title>
+    <title>PodBite</title>
     <meta name="description" content="Transform hours of podcast content into shareable clips with PodBite" />
     <meta name="author" content="PodBite" />
 
     <meta property="og:title" content="PodBite - Create Perfect Podcast Clips" />
     <meta property="og:description" content="Transform hours of podcast content into shareable clips with PodBite" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="https://hc-cdn.hel1.your-objectstorage.com/s/v3/f4a6496a18fa65420937d2709390e6314d613420_image.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:site" content="@podbite" />
+    <meta name="twitter:image" content="https://hc-cdn.hel1.your-objectstorage.com/s/v3/f4a6496a18fa65420937d2709390e6314d613420_image.png" />
     
-    <link rel="icon" href="/public/lovable-uploads/e52bd2a2-bdb1-4e4d-b690-9dfc8c958d1a.png" type="image/png">
+    <link rel="icon" href="https://hc-cdn.hel1.your-objectstorage.com/s/v3/f4a6496a18fa65420937d2709390e6314d613420_image.png" type="image/png">
   </head>
 
   <body>
